--- a/WpfProto/MainWindow.xaml
+++ b/WpfProto/MainWindow.xaml
@@ -1,15 +1,15 @@
 ﻿<Window x:Class="WpfProto.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="WPF Prototype" Height="500" Width="1000">
+        Title="WPF Prototype" Height="450" Width="1090">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="400" />
-            <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="440"/>
             <ColumnDefinition Width="440"/>
+            <ColumnDefinition Width="200"/>
         </Grid.ColumnDefinitions>
         <Border BorderThickness="2" BorderBrush="Brown"  Grid.Row ="0" Grid.Column="0">
             <Image x:Name="ImageBefore" Width="440" Height="320"/>
@@ -17,8 +17,12 @@
         <Border BorderThickness="2" BorderBrush="Aquamarine" Grid.Row ="0" Grid.Column="1">
             <Image x:Name="ImageAfter" Width="440" Height="320"/>
         </Border>
-        <StackPanel Width="Auto" Height="Auto" Grid.Row ="1" Grid.Column="0">
-            <Button Name="ButtonGo" Click="ButtonGo_Click" Content="Go" Width="200" FontSize="28" Margin="4,4,4,4"/>
+        <StackPanel Width="Auto" Height="Auto" Grid.Row ="0" Grid.Column="2">
+            <Button Name="ButtonGo" Click="ButtonGo_Click" Content="Go" Width="100" FontSize="28" Margin="4,4,4,4"/>
+            <Button Name="ButtonNext" Click="ButtonNext_Click" Content="Next" Width="100" FontSize="28" Margin="4,4,4,4"/>
+            <TextBox Name="TextBoxHMid" Text="90" Width="100" FontSize="14" Margin="4,4,4,4"/>
+            <TextBox Name="TextBoxHWidth" Text="30" Width="100" FontSize="14" Margin="4,4,4,4"/>
+            <TextBox Name="TextBoxHAfter" Text="160" Width="100" FontSize="14" Margin="4,4,4,4"/>
         </StackPanel>
     </Grid>
 </Window>
